trying to prevent hash jumping in story page

--- a/css/home.css
+++ b/css/home.css
@@ -12,3 +12,7 @@ sr-home .title{
  font-weight: 600;
  text-transform: uppercase;
 }
+
+body{
+  min-height: 100vh;
+}
